# kitbasher

./: README.md
kitbasher-game/: Cargo.toml
kitbasher-game/assets/models/: 1x1.glb  1x1.ron  2x1.glb  2x1.ron  2x1_slanted.glb  2x1_slanted.ron  2x2.glb  2x2.ron  2x2_axle.glb  2x2_axle.ron  2x2_slanted.glb  2x2_slanted.ron  4x1.glb  4x1.ron  wheel.glb  wheel.ron
kitbasher-game/models/: 1x1.ron  2x1_slanted.ron  2x2_axle.glb  2x2_axle.ron  2x2_slanted.ron  wheel.ron
kitbasher-game/src/: cartpole.rs  configs.rs  engine.rs  gen_metadata.rs  lib.rs  main.rs  viewer.rs
kitbasher-game/src/ui/: menu_button.rs  mod.rs
kitbasher-ml/: .gitignore  README.md  batch_size.sh  buffer_size.sh  contrastive.sh  eval_classifier.py  layers.sh  max_actions.sh  mirror.sh  pyproject.toml  q_epsilon.sh  score_image.py  show_ldraw.py  tanh.sh  test.py  visualize_clip.py
kitbasher-ml/.github/workflows/: lint.yml
kitbasher-ml/kitbasher/: distributed_scorer.py  env.py  eval.py  mcts.py  pretraining.py  scorers.py  train.py  utils.py
kitbasher-ml/kitbasher/algorithms/: dqn.py  replay_buffer.py
kitbasher-ml/kitbasher/batch_scoring/: messages.py  scorer.py
kitbasher-ml/kitbasher/experiments/: test_rust.py
kitbasher-ml/kitbasher_rust/: Cargo.toml  kitbasher_rust.pyi  pyproject.toml
kitbasher-ml/kitbasher_rust/src/: lib.rs
kitbasher-ml/ldraw_models/: rowboat1.ldr  rowboat2.ldr  skateboard1.ldr  skateboard2.ldr  spaceship1.ldr  spaceship2.ldr
yourproject-game/: Cargo.toml
yourproject-game/src/: configs.rs  lib.rs  main.rs
yourproject-ml/: README.md  pyproject.toml
yourproject-ml/.github/workflows/: lint.yml
yourproject-ml/yourproject/experiments/: test_rust.py
yourproject-ml/yourproject_rust/: Cargo.toml  pyproject.toml
yourproject-ml/yourproject_rust/src/: lib.rs
