[package]
name = "kitbasher-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "gen_metadata"
path = "src/gen_metadata.rs"

[dependencies]
bevy = { version = "0.12.0", features = ["wayland"] }
gltf = "1.4.1"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.208", features = ["derive"] }
