[tool.poetry]
name = "kitbasher-ml"
version = "0.1.0"
description = ""
authors = ["Ben Giacalone <bensgiacalone@gmail.com>"]
readme = "README.md"
packages = [{include = "kitbasher"}]

[tool.poetry.dependencies]
python = "~3.9"
torch = "2.0.0"
tqdm = "^4.65.0"
wandb = {extras = ["media"], version = "^0.19.0"}
gymnasium = "^0.28.1"
envpool = "^0.8.2"
types-tqdm = "^4.65.0.1"
maturin = "^0.15.2"
safetensors = "^0.4.2"
torch-geometric = "^2.5.3"
rerun-sdk = "^0.18.2"
open3d = "^0.18.0"
addict = "^2.4.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
transformers = "^4.45.1"
pydantic = "^2.9.2"
pyzmq = "^26.2.0"
jupyterlab = "^4.4.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
