[package]
name = "kitbasher_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kitbasher_rust"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
bevy = "0.14.0"
kitbasher-game = { path = "../../kitbasher-game" }
ron = "0.8.1"
pyo3 = "0.22.2"
