[package]
name = "kitbasher_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kitbasher_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "render_worker"
path = "src/bin/render_worker.rs"

[dependencies]
rand = "0.8.5"
bevy = "0.14.0"
kitbasher-game = { path = "../../kitbasher-game" }
ron = "0.8.1"
pyo3 = "0.22.2"
gltf = "1.4.1"
three-d = { version = "0.17.0", features = ["headless"] }
winit = "0.28"
zmq = "0.10.0"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
base64 = "0.22.1"
weldr = "0.3.1"
